[Added] More picture on index

--- a/62130500122_groupwork_1/index.html
+++ b/62130500122_groupwork_1/index.html
@@ -66,20 +66,132 @@
         </div><br><br>
 
         <div id="photo" class="flex justify-center items-center space-x-28">
-          <div id="pic1">
+          <div id="pic3">
            <button class=" hover:text-gray-400">
              <img src="images/03.jpg" class="h-3/5"><br>
              <p class="text-center text-3xl font-light tracking-wide">Summer Nights</p>
             </button> 
           </div>
 
-          <div id="pic2">
+          <div id="pic4">
             <button class="hover:text-gray-400">
               <img src="images/04.jpg" class="h-3/5"><br>
               <p class="text-center text-3xl font-light tracking-wide">Spring Road</p>
             </button>
           </div>
-        </div>
+        </div><br><br>
+
+        <div id="photo" class="flex justify-center items-center space-x-28">
+          <div id="pic5">
+            <button class=" hover:text-gray-400">
+              <img src="images/05.jpeg" class="h-3/5"><br>
+              <p class="text-center text-3xl font-light tracking-wide">Blackwell</p>
+            </button> 
+          </div>
+
+          <div id="pic6">
+            <button class="hover:text-gray-400">
+              <img src="images/06.jpg" class="h-3/5"><br>
+              <p class="text-center text-3xl font-light tracking-wide">Beneath The Moon</p>
+            </button>
+          </div>
+        </div><br><br>
+
+        <div id="photo" class="flex justify-center items-center space-x-28">
+          <div id="pic9">
+            <button class=" hover:text-gray-400">
+              <img src="images/09.jpg" class="h-3/5"><br>
+              <p class="text-center text-3xl font-light tracking-wide">Golden Post</p>
+            </button> 
+          </div>
+
+          <div id="pic10">
+            <button class="hover:text-gray-400">
+              <img src="images/10.jpg" class="h-3/5"><br>
+              <p class="text-center text-3xl font-light tracking-wide">439</p>
+            </button>
+          </div>
+        </div><br><br>
+
+        <div id="photo" class="flex justify-center items-center space-x-28">
+          <div id="pic11">
+            <button class=" hover:text-gray-400">
+              <img src="images/11.jpeg" class="h-3/5"><br>
+              <p class="text-center text-3xl font-light tracking-wide">337</p>
+            </button> 
+          </div>
+
+          <div id="pic12">
+            <button class="hover:text-gray-400">
+              <img src="images/12.jpg" class="h-3/5"><br>
+              <p class="text-center text-3xl font-light tracking-wide">Golden Steeple</p>
+            </button>
+          </div>
+        </div><br><br>
+
+        <div id="photo" class="flex justify-center items-center space-x-28">
+          <div id="pic13">
+            <button class=" hover:text-gray-400">
+              <img src="images/13.jpg" class="h-3/5"><br>
+              <p class="text-center text-3xl font-light tracking-wide">Summer Song</p>
+            </button> 
+          </div>
+
+          <div id="pic14">
+            <button class="hover:text-gray-400">
+              <img src="images/14.jpg" class="h-3/5"><br>
+              <p class="text-center text-3xl font-light tracking-wide">Holding On</p>
+            </button>
+          </div>
+        </div><br><br>
+
+        <div id="photo" class="flex justify-center items-center space-x-28">
+          <div id="pic15">
+            <button class=" hover:text-gray-400">
+              <img src="images/15.jpg" class="h-3/5"><br>
+              <p class="text-center text-3xl font-light tracking-wide">Sunsise Walk</p>
+            </button> 
+          </div>
+
+          <div id="pic16">
+            <button class="hover:text-gray-400">
+              <img src="images/16.jpg" class="h-3/5"><br>
+              <p class="text-center text-3xl font-light tracking-wide">Between The Lines</p>
+            </button>
+          </div>
+        </div><br><br>
+
+        <div id="photo" class="flex justify-center items-center space-x-28">
+          <div id="pic17">
+            <button class=" hover:text-gray-400">
+              <img src="images/17.jpg" class="h-3/5"><br>
+              <p class="text-center text-3xl font-light tracking-wide">State Street</p>
+            </button> 
+          </div>
+
+          <div id="pic18">
+            <button class="hover:text-gray-400">
+              <img src="images/18.jpg" class="h-3/5"><br>
+              <p class="text-center text-3xl font-light tracking-wide">409</p>
+            </button>
+          </div>
+        </div><br><br>
+
+        <div id="photo" class="flex justify-center items-center space-x-28">
+          <div id="pic19">
+            <button class=" hover:text-gray-400">
+              <img src="images/19.jpg" class="h-3/5"><br>
+              <p class="text-center text-3xl font-light tracking-wide">At The End of The Street</p>
+            </button> 
+          </div>
+
+          <div id="pic20">
+            <button class="hover:text-gray-400">
+              <img src="images/20.jpg" class="h-3/5"><br>
+              <p class="text-center text-3xl font-light tracking-wide">Utility Flowers</p>
+            </button>
+          </div>
+        </div><br><br>
       </div>
     </div>
   
